@@ -33,6 +33,7 @@
 #include "gnome-cmd-con-dialog.h"
 #include "gnome-cmd-remote-dialog.h"
 #include "gnome-cmd-main-win.h"
+#include "gnome-cmd-mkdir-dialog.h"
 #include "gnome-cmd-options-dialog.h"
 #include "gnome-cmd-prepare-copy-dialog.h"
 #include "gnome-cmd-prepare-move-dialog.h"
@@ -688,7 +689,14 @@ void file_chown (GtkMenuItem *menuitem, gpointer not_used)
 
 void file_mkdir (GtkMenuItem *menuitem, gpointer not_used)
 {
-    gnome_cmd_file_selector_show_mkdir_dialog (get_fs (ACTIVE));
+    GnomeCmdDir *dir = get_fs (ACTIVE)->get_directory();
+    g_return_if_fail (GNOME_CMD_IS_DIR (dir));
+
+    GtkWidget *dialog = gnome_cmd_mkdir_dialog_new (dir);
+    g_return_if_fail (GNOME_CMD_IS_DIALOG (dialog));
+
+    gtk_widget_ref (dialog);
+    gtk_widget_show (dialog);
 }
 
 
